tests/syntax_error/funcptr.jou
def foo(x: funcptr) -> None:  # Error: expected a '(' to denote the start of funcptr argument types, got ')'
    pass
